Fix menu to behave well on mobile, add default media queries to theme and import menu animation

--- a/src/index.css
+++ b/src/index.css
@@ -8,15 +8,10 @@ html {
 
 body {
   margin: 0;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif; */
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
-  color: rgba(0, 0, 0, 0.65);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
 }
 
 code {
